syntax = "proto3";// 协议为proto3


package proto;
//option go_package = "grpc/03serverStream/proto";
option go_package = "./;proto";

//  protoc --go_out=plugins=grpc:./ .\clientStream.proto
// 定义我们的服务（可定义多个服务,每个服务可定义多个接口）

service StreamClient{
  // 客户端流式rpc，在请求的参数前添加stream
  rpc RouteList (stream StreamRequest) returns (SimpleResponse){};
}

// 定义发送请求信息
message StreamRequest{
  // 定义发送的参数，采用驼峰命名方式，小写加下划线，如：student_name
  // 请求参数
  string stream_data = 1;
}

// 定义流式响应信息
message SimpleResponse{
  //响应码
  int32 code = 1;
  //响应值
  string value = 2;
}
